# trading-scanner

./: .gitignore  README.md  pyproject.toml
books/: dataload.ipynb  strategy.ipynb  strategy_updated.ipynb
config/: universe.toml
docs/: channels.md  momentum_12-1-30-30.md
src/scanner_bot/api/: app.py
src/scanner_bot/app/: app.py
src/scanner_bot/cli/: ingest.py  scan.py
src/scanner_bot/config/: ingest_config.py  universe.py
src/scanner_bot/core/: intervals.py  models.py  ports.py
src/scanner_bot/infra/db/: __init__.py  sqlite.py  sqlite_barstore.py  sqllite_barstore.py
src/scanner_bot/infra/db/sql/: 000_pragmas.sql  001_schemas.sql  002_indexes.sql  003_views.sql  004_seed_intervals.sql
src/scanner_bot/infra/ingest/: yfinance_ingest.py
