[project]
name = "scanner"
version = "0.1.0"
description = "This is a stock scanner"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.3.0",
    "dash-ag-grid>=32.3.2",
    "dash-bootstrap-components>=2.0.4",
    "fastapi>=0.128.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "unicorn>=2.1.4",
    "uvicorn>=0.40.0",
]

[project.scripts]
scanner-app = "scanner_bot.app.app:main"
scanner-api = "scanner_bot.api.app:main"
scanner-ingest = "scanner_bot.cli.ingest:main"
scanner-scan = "scanner_bot.cli.scan:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scanner_bot"]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"
